# oxide

./: .gitignore  README.md  run.bat
client/: Cargo.toml
client/src/: app.rs  main.rs
client/src/app/: mod.rs
client/src/app/page/: mod.rs  splash.rs
client/src/page/: splash.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  server.rs
