[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
bincode = "2.0.1"
colored = "3.0.0"
mini-redis = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = {version="1.48.0", features=["full"]}
